--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
+    "canvas2image": "^1.0.5",
     "file-saver": "^2.0.2",
     "html2canvas": "^1.0.0-rc.5",
     "react": "^16.12.0",
