--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "html2canvas": "^1.0.0-rc.5",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-draggable": "^4.4.3",
     "react-scripts": "3.3.0"
   },
   "scripts": {
